# OpenVSLAM_FeatureExtractor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
OpenVSLAM_Feature_Extractor/: CMakeLists.txt
OpenVSLAM_Feature_Extractor/include/: orb_extractor.h
OpenVSLAM_Feature_Extractor/test/: extraction_test.cpp  test_orb_feature_extractor.cpp
pybind_opencvMat_final/: README.md  keypoints.yml  main.cpp
python_bindings/: CMakeLists.txt  LICENSE  README.md  example_final.ipynb  setup.py
src/: orb_extractor.cc  orb_extractor_node.cc  orb_params.cc
test/: extraction_test.cpp
